# flask-rest-cookiecutter

./: .gitignore  cookiecutter.json
{{cookiecutter.project_slug}}/: .coveragerc  Dockerfile  Makefile  docker-compose.yml  docker_start.sh  pyproject.toml  settings.toml  setup.cfg
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: app.py  auth.py  database.py  models.py  schemas.py  scripts.py  views.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/tests/: conftest.py  factories.py  test_api.py
